fix: nextauth urls

--- a/.env
+++ b/.env
@@ -2,6 +2,6 @@ GOOGLE_ID=663124006008-8qjr90d8nptg1t98pro6cl9ool6t7nn2.apps.googleusercontent.c
 GOOGLE_CLIENT_SECRET=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
 MONGODB_URI=mongodb+srv://lorenzocasa:agTZr5nVovEMYXw9@app.fqmuqox.mongodb.net/
 
-NEXTAUTH_URL=http://localhost:3000
-NEXTAUTH_URL_INTERNAL=http://localhost:3000
+NEXTAUTH_URL=https://promptopia-liart-two.vercel.app/
+NEXTAUTH_URL_INTERNAL=https://promptopia-liart-two.vercel.app/
 NEXTAUTH_SECRET=n3aMMnQLdVZ+5rMdKDyWg4OqAEKohqPtUObhkbzsovI=
